Atualização do readme

--- a/index.html
+++ b/index.html
@@ -36,10 +36,18 @@
             <!-- lista -->
             <ul>
                 <li>
-                    <a href="#">Inscreva-se no NLW</a>
+                    <a
+                        href="https://www.linkedin.com/in/letimberg-cavalcante/details/experience/"
+                        target="_blank"
+                        >Experiências profissionais</a
+                    >
                 </li>
                 <li>
-                    <a href="#">Baixe meu e-book</a>
+                    <a
+                        href="https://www.linkedin.com/in/letimberg-cavalcante/details/certifications/"
+                        target="_blank"
+                        >Licenças e certificados</a
+                    >
                 </li>
                 <li>
                     <a href="https://github.com/Letimberg" target="_blank"
