Adicionando skills, tipo sanguíneo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap"
             rel="stylesheet"
         />
+
+        <link rel="shortcut icon" type="image/png" href="./assets/avatar.png" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>DevLinks</title>
@@ -18,11 +20,10 @@
         <div id="container">
             <!-- profile -->
             <div id="profile">
-                <img
-                    src="./assets/avatar.png"
-                    alt="Foto de Letimberg Cavalcante, usando camisa preta."
-                />
+                <img src="./assets/avatar.png" alt="Atavar" />
                 <p>@letimberg</p>
+                <p>Fortaleza, CE, Brasil</p>
+                <span id="aborh">A+</span>
             </div>
             <!-- /.profile -->
 
@@ -63,6 +64,26 @@
                 </li>
             </ul>
             <!-- /.lista -->
+
+            <!-- skills -->
+            <div id="skills">
+                <a>
+                    <img src="./assets/html5.svg" alt="Imagem html" />
+                </a>
+                <a>
+                    <img src="./assets/css3.svg" alt="Imagem html" />
+                </a>
+                <a>
+                    <img src="./assets/javascript.svg" alt="Imagem html" />
+                </a>
+                <a>
+                    <img src="./assets/node.svg" alt="Imagem html" />
+                </a>
+                <a>
+                    <img src="./assets/mysql.svg" alt="Imagem html" />
+                </a>
+            </div>
+            <!-- /.skills -->
 
             <!-- social-links -->
             <div id="social-links">
