--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             rel="stylesheet"
         />
 
-        <link rel="shortcut icon" type="image/png" href="./assets/avatar.png" />
+        <link rel="shortcut icon" type="image/png" href='./assets/avatar.png' />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>DevLinks</title>
