Adicinando lista do tipo sanguíneo

--- a/index.html
+++ b/index.html
@@ -8,22 +8,80 @@
             rel="stylesheet"
         />
 
-        <link rel="shortcut icon" type="image/png" href='./assets/avatar.png' />
+        <link rel="shortcut icon" type="image/png" href="./assets/avatar.png" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>DevLinks</title>
         <link rel="stylesheet" href="style.css" />
     </head>
 
+    <!-- Inclua o modal aqui -->
     <body>
         <!-- container -->
         <div id="container">
             <!-- profile -->
             <div id="profile">
                 <img src="./assets/avatar.png" alt="Atavar" />
+
+                <!-- aborh -->
+                <div id="aborh">
+                    <button title="Doa para quem." id="aborhBtn">A+</button>
+                    <div id="aborhTable">
+                        <table>
+                            <thead>
+                                <th>Tipo</th>
+                                <th>Doa</th>
+                                <th>Recebe</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>O+</td>
+                                    <td>O+, A+, B+ e AB+</td>
+                                    <td>O+ e O-</td>
+                                </tr>
+                                <tr>
+                                    <td>O-</td>
+                                    <td>O+, A+, B+, AB+, O-, A-, B- e AB-</td>
+                                    <td>O-</td>
+                                </tr>
+                                <tr>
+                                    <td>A+</td>
+                                    <td>A+ e AB+</td>
+                                    <td>A+, A-, O+ e O-</td>
+                                </tr>
+                                <tr>
+                                    <td>A-</td>
+                                    <td>A+, A-, AB+ e AB-</td>
+                                    <td>A- e O-</td>
+                                </tr>
+                                <tr>
+                                    <td>B+</td>
+                                    <td>B+ e AB+</td>
+                                    <td>B+, B-, O+ e O-</td>
+                                </tr>
+                                <tr>
+                                    <td>B-</td>
+                                    <td>B+, B-, AB+ e AB-</td>
+                                    <td>B- e O-</td>
+                                </tr>
+                                <tr>
+                                    <td>AB+</td>
+                                    <td>AB+</td>
+                                    <td>O+, A+, B+, AB+, O-, A-, B- e AB-</td>
+                                </tr>
+                                <tr>
+                                    <td>AB-</td>
+                                    <td>AB+ e AB-</td>
+                                    <td>A-, B-, O- e AB-</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- /.aborh -->
+
                 <p>@letimberg</p>
                 <p>Fortaleza, CE, Brasil</p>
-                <span id="aborh">A+</span>
             </div>
             <!-- /.profile -->
 
