Melhorando readme e resolvendo bug do avatar bugado

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="container">
             <!-- profile -->
             <div id="profile">
-                <img src="./assets/avatar.png" alt="Atavar" />
+                <img src="./assets/avatar.png" alt="Avatar" />
 
                 <!-- aborh -->
                 <div id="aborh">
