--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
             <!-- footer -->
             <footer>
                 Feito com 💜 pela
-                <a href="http://rocketseat.com.br" target="_blank"
-                    >Rocketseat</a
+                <a href="" target="_blank"
+                    >Letimberg</a
                 >
             </footer>
             <!-- /.footer -->
